--- a/Project/index.html
+++ b/Project/index.html
@@ -32,5 +32,32 @@
         <li id="trie">Trie 0%</li>
       </ul>
     </main>
+
+    <footer>
+      <hr>
+      <div>
+        <section>
+          <h1>Manav Jain</h1>
+          <p>A Full Stack Developer</p>
+          <a href="https://manavjain-portfolio.vercel.app/">My Portfolio</a>
+        </section>
+  
+        <section>
+          <h1>Projects</h1>
+          <a href="https://mern-projects-amber.vercel.app/">MERN Stack</a>
+          <a href="https://manavjain01.github.io/BlockChain-Projects/MainFile/">BlockChain Projects</a>
+          <a href="https://more-projects-page.vercel.app/">More Projects</a>
+        </section>
+  
+        <section>
+          <h1>Let's be social</h1>
+          <section>
+            <a href="https://www.instagram.com/manv_jain/"><img src="./Images/instagram.png" alt="instagram" id="instagram"></a>
+            <a href="https://github.com/manavjain01"><img src="./Images/github.png" alt="github" id="github"></a>
+            <a href="https://in.linkedin.com/in/manav-jain-02a54824a?original_referer=https%3A%2F%2Fwww.google.com%2F"><img src="./Images/linkedin.png" alt="linkedin" id="linkedin"></a>
+          </section>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
